crates/pixi_manifest/src/snapshots/pixi_manifest__manifest__tests__add_channels.snap
---
source: crates/pixi_manifest/src/manifest.rs
assertion_line: 1479
expression: manifest.document.to_string()
---
[project]
name = "foo"
channels = ["conda-forge", "https://custom.com/channel"]
platforms = ["linux-64", "win-64"]

[dependencies]

[feature.test]
channels = ["test", "test2"]

[feature.test.dependencies]

[feature.cuda]
channels = ["nvidia"]
